@@ -5,11 +5,11 @@
 
 #include <list>
 
-namespace xdrpp { namespace detail {
+namespace xdrpp { namespace impl {
 
 template <typename... Ts> struct xdrer<std::list<Ts...> >
 	: vector_xdrer<std::list<Ts...> > {};
 
-} }  // namespace xdrpp::detail
+} }  // namespace xdrpp::impl
 
 #endif  // XDRPP_LIST_HPP_included
