@@ -5,11 +5,11 @@
 
 #include <map>
 
-namespace xdrpp { namespace detail {
+namespace xdrpp { namespace impl {
 
 template <typename... Ts> struct xdrer<std::map<Ts...> >
 	: map_xdrer<std::map<Ts...> > {};
 
-} }  // namespace xdrpp::detail
+} }  // namespace xdrpp::impl
 
 #endif  // XDRPP_MAP_HPP_included
