@@ -5,11 +5,11 @@
 
 #include <map>
 
-namespace xdrpp { namespace detail {
+namespace xdrpp { namespace impl {
 
 template <typename... Ts> struct xdrer<std::multimap<Ts...> >
 	: map_xdrer<std::multimap<Ts...> > {};
 
-} }  // namespace xdrpp::detail
+} }  // namespace xdrpp::impl
 
 #endif  // XDRPP_MULTIMAP_HPP_included
