@@ -5,11 +5,11 @@
 
 #include <vector>
 
-namespace xdrpp { namespace detail {
+namespace xdrpp { namespace impl {
 
 template <typename... Ts> struct xdrer<std::vector<Ts...> >
 	: vector_xdrer<std::vector<Ts...> > {};
 
-} }  // namespace xdrpp::detail
+} }  // namespace xdrpp::impl
 
 #endif  // XDRPP_VECTOR_HPP_included
