@@ -1,3 +1,7 @@
+2014-12-25  Chris Rorvick  <chris@rorvick.com>
+
+	Rename namespace: `detail' => `impl'
+
 2014-12-24  Chris Rorvick  <chris@rorvick.com>
 
 	Split header out into many
